2007-08-21  Torsten Rahn  <rahn@kde.org>

	* src/lib/CMakeLists.txt:
	  texcolorizer->TextureColorizer
	  Fix "elseif".
	* src/lib/texcolorizer.{cpp,h}: 
	  texcolorizer->TextureColorizer

2007-08-21  Inge Wallin  <inge@lysator.liu.se>

	Rename files according to the coding standards: XmlHandler
	* src/lib/xmlhandler.cpp: renamed into XmlHandler.cpp
	* src/lib/xmlhandler.h:   renamed into XmlHandler.h
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleModel.cpp: use new name
	* src/lib/PlaceMarkManager.cpp: use new name

	Fix errors on Windows.
	* src/lib/gps/GpxFile.cpp (add*): Use dynamic casts instead of
	C-style casts

	Remove obsolete class: SearchComboBox
	* src/lib/searchcombobox.cpp: remove
	* src/lib/searchcombobox.h: remove
	* src/lib/CMakeLists.txt:  Reflect removal

2007-08-21  Murad Tagirov  <tmurad@gmail.com>

    Created class GpxFileViewItem. Moved almost all functioanality
    from GpxFileModel to FileViewModel and GpxFileViewItem. Currently
    some part of code is ifdefed with "#if 0" in MarbleWidget and
    MarbleControlBox to keep existing functionality.
    * src/lib/MarbleWidget.{h,cpp}
    * src/lib/MarbleModel.{h,cpp}
    * src/lib/FileViewModel.{h,cpp}: new class
    * src/lib/GpxFileViewItem.{h,cpp}
    * src/lib/MarbleControlBox.cpp
    * src/lib/CMakeLists.txt
    * src/lib/AbstractFileViewItem.h

    Introduced FileViewModel class and AbstactFileViewItem class
    with pure virtual methods (saveFile(), closeFile()). We could
    create KMLFileViewItem, GpxFileViewItem and implement this methods
    in order to show opened files in FileView without touching model.
    * src/lib/FileViewModel.{h,cpp}: new class
    * src/lib/AbstractFileViewItem.h: new class
    * src/lib/MarbleControlBox.cpp
    * src/lib/FileViewModel.cpp
    * src/lib/CMakeLists.txt
    * docs/projects/kml/KMLClasses.xmi


2007-08-21  Murad Tagirov  <tmurad@gmail.com>

    Inherit KMLPlaceMark -> PlaceMark -> KMLFeature like
    in kml class diagram.