@@ -1,3 +1,12 @@
+2007-08-21  Inge Wallin  <inge@lysator.liu.se>
+
+	Rename files according to the coding standards: VectorMap
+	* src/lib/vectorman.cpp: renamed into VectorMap.cpp
+	* src/lib/vectormap.h:   renamed into VectorMap.h
+	* src/lib/CMakeLists.txt:  Reflect name changes
+	* src/lib/MarbleModel.cpp: use new name
+	* src/lib/VectorComposer.cpp: use new name
+
 2007-08-21  Torsten Rahn  <rahn@kde.org>
 
 	* src/lib/CMakeLists.txt:
